# VarSwapWorkbench

./: CMakeLists.txt  README.md  run_varswap_workbench.bat  varswap_workbench.ini
config/: config.h
glad/include/glad/: glad.h
res/: res.rc
src/varswap/: occurrence.cpp  occurrence.h  settings_state.h  varswap_pane.cpp  varswap_pane.h
tools/varswap/: README.md  VarSwapHelper.ps1  VarSwapWorkbench.ps1  main.cpp  workbench_main.cpp  workbench_settings_stub.cpp
varswap_core/: CMakeLists.txt
